# AI-Microservice

./: .env.example  .gitignore  111  README.md  docker-compose.yml  周报.txt
.cursor/rules/: python-3-11.mdc  shell-git-bash.mdc
Image2Psd/: run.py  settings.example.yaml  start.sh
Image2Psd/app/: main.py
comfyui_cleanup_delete_route/: README.md  __init__.py  pyproject.toml
docs/: deployment-guide.md
gateway/: pom.xml
image2psd/: Dockerfile  requirements.txt  run.py  start.sh
image2psd/app/: config.py  main.py
msg_queue/: .gitignore  README.md  pom.xml  start.sh
nginx/: nginx.conf
publish/: README.md  WORKFLOW.md  log_gateway.sh  publish.bat  publish.sh  publish_gateway.sh  publish_msg_queue.sh  setup_ssh.sh  test_api.py
scripts/: comfy_delete_route_example.py  deploy.sh  new-service.sh  start_comfyui_public.bat
see_through/: Dockerfile  nacos_registry.py  requirements.txt  run.py  settings.yaml  start.sh  test_api.py
see_through/app/: config.py  main.py
see_through/logs/: see_through.log.2026-04-23  see_through.log.2026-04-24  see_through.log.2026-04-25
see_through/resources/: workflow.json
ui_builder/: .dockerignore  Dockerfile  app.py  config.py  nacos_registry.py  requirements.txt  run.py  settings.example.yaml  start.sh  ui-prefab-com-components.json  watchdog.ps1
video_analyze/: Dockerfile  LlmService.java  TestAnalyze.java  app.py  config.py  nacos_registry.py  requirements.txt  run.py  settings.example.yaml  start.sh  test_analyze.py  test_concurrency.py  test_route_regressions.py  video-analyze-api.md  watchdog.ps1
(+126 files in other folders)
